--- a/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
+++ b/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
@@ -1,27 +1,28 @@
 ﻿@page "/generate-wallet-with-password-page"
 @using System.ComponentModel.DataAnnotations;
 
+@inherits MvvmComponentBase<GenerateWalletWithPasswordViewModel>
 @inject Breadcrumbs breadcrumbs
-@inject GenerateWalletWithPasswordViewModel generateWalletWithPasswordViewModel;
 @inject NavigationManager nav;
-<MudOverlay @bind-Visible="isVisible" DarkBackground="true" >
+
+<MudOverlay @bind-Visible="isVisible" DarkBackground="true">
     <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
 </MudOverlay>
 <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
-<DataAnnotationsValidator/>
+    <DataAnnotationsValidator />
     <MudGrid>
         <MudItem xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
             <MudCard>
                 <MudCardContent>
-                
+
                     <MudTextField Label="Password" HelperText="Choose a strong password" Class="mt-3"
-                                  @bind-Value="model.Password" For="@(() => model.Password)" InputType="InputType.Password"/>
+                                    @bind-Value="model.Password" For="@(() => model.Password)" InputType="InputType.Password" />
                     <MudTextField Label="Password" HelperText="Repeat the password" Class="mt-3"
-                                  @bind-Value="model.Password2" For="@(() => model.Password2)" InputType="InputType.Password"/>
+                                    @bind-Value="model.Password2" For="@(() => model.Password2)" InputType="InputType.Password" />
                 </MudCardContent>
                 <MudCardActions>
-                    <MudButton ButtonType="MudBlazor.ButtonType.Submit" 
-                    Variant="MudBlazor.Variant.Filled" Color="Color.Primary" Class="ml-auto">Register</MudButton>
+                    <MudButton ButtonType="MudBlazor.ButtonType.Submit"
+                                Variant="MudBlazor.Variant.Filled" Color="Color.Primary" Class="ml-auto">Register</MudButton>
                 </MudCardActions>
             </MudCard>
         </MudItem>
@@ -29,10 +30,11 @@
 </EditForm>
 
 @code {
+    GenerateWalletWithPasswordViewModel generateWalletWithPasswordViewModel;
     RegisterAccountForm model = new RegisterAccountForm();
     private bool isVisible = false;
     public class RegisterAccountForm
-    {   
+    {
 
         [Required]
         [StringLength(30, ErrorMessage = "Password must be at least 8 characters long.", MinimumLength = 8)]
@@ -46,12 +48,13 @@
 
     protected override async Task OnInitializedAsync()
     {
+        generateWalletWithPasswordViewModel = ViewModel;
         breadcrumbs._items = new List<BreadcrumbItem>
         {
-            new BreadcrumbItem("Home", href: "/", disabled: false),
-            new BreadcrumbItem("Create your Codename", href: "/create-codename-page", disabled: false),
-            new BreadcrumbItem("Create your EDI", href: "/create-edi-page", disabled: false),
-            new BreadcrumbItem("Create your Password", href: null, disabled: true),
+        new BreadcrumbItem("Home", href: "/", disabled: false),
+        new BreadcrumbItem("Create your Codename", href: "/create-codename-page", disabled: false),
+        new BreadcrumbItem("Create your EDI", href: "/create-edi-page", disabled: false),
+        new BreadcrumbItem("Create your Password", href: null, disabled: true),
         };
         breadcrumbs.Update();
     }
@@ -61,7 +64,7 @@
         isVisible = true;
         StateHasChanged();
         generateWalletWithPasswordViewModel.Password = model.Password;
-        await generateWalletWithPasswordViewModel.Submit();
+        await generateWalletWithPasswordViewModel.SubmitCommand.ExecuteAsync(null);
         breadcrumbs.userData = generateWalletWithPasswordViewModel.userData;
         breadcrumbs.userData.WalletPassword = model.Password;
         if (breadcrumbs.userData?.BolWallet == null)
