--- a/BolWallet/_Imports.razor
+++ b/BolWallet/_Imports.razor
@@ -7,3 +7,11 @@
 @using BolWallet
 @using BolWallet.Shared
 @using MudBlazor
+
+
+@using Blazing.Mvvm
+@using Blazing.Mvvm.Components
+@using Blazing.Mvvm.Components.Routing
+@using Blazing.Mvvm.ComponentModel
+
+@using BolWallet.ViewModels
