--- a/BolWallet/Pages/CertifierPage.razor
+++ b/BolWallet/Pages/CertifierPage.razor
@@ -1,33 +1,33 @@
 ﻿@page "/certifier-page"
-
+@inherits MvvmComponentBase<CertifierViewModel>
 @inject Breadcrumbs breadcrumbs
 @inject NavigationManager nav;
 @inject UserViewModel userViewModel
-@inject CertifierViewModel certifierViewModel
 
 <MudGrid>
     <MudItem xs="12" sm="6">
         <MudPaper Class="pa-2">
             <MudTextField @bind-Value="@certifierViewModel.MainAddressToWhitelist" Label="Paste Main Address To Whitelist" Variant="MudBlazor.Variant.Outlined"></MudTextField>
-            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> await certifierViewModel.Whitelist())">Whitelist</MudButton>
+            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> await certifierViewModel.WhitelistCommand.ExecuteAsync(null))">Whitelist</MudButton>
             <br />
             <MudTextField @bind-Value="@certifierViewModel.CodeNameToCertify" Label="Paste Codename To Certify" Variant="MudBlazor.Variant.Outlined"></MudTextField>
-            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> await certifierViewModel.Certify())">Certify</MudButton>
+            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> await certifierViewModel.CertifyCommand.ExecuteAsync(null))">Certify</MudButton>
             <br />
         </MudPaper>
     </MudItem>
 </MudGrid>
 @code {
+    CertifierViewModel certifierViewModel;
     protected override async Task OnInitializedAsync()
     {
-
+        certifierViewModel=ViewModel;
         breadcrumbs._items = new List<BreadcrumbItem>
         {
             new BreadcrumbItem("Home", href: "/index-with-account", disabled: false),
             new BreadcrumbItem("Community Operations", href: null, disabled: true),
         };
 
-        breadcrumbs.userData = userViewModel._userData;
+        breadcrumbs.userData = userViewModel.userData;
         breadcrumbs.Update();
 
     }
