--- a/BolWallet/Pages/CreateEdiPage.razor
+++ b/BolWallet/Pages/CreateEdiPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/create-edi-page"
 
+@inherits MvvmComponentBase<CreateEdiViewModel>
 @inject Breadcrumbs breadcrumbs
-@inject CreateEdiViewModel createEdiViewModel;
 @inject NavigationManager nav;
 
 @using System.ComponentModel.DataAnnotations
@@ -28,6 +28,8 @@
     </MudItem>
 </MudGrid>
 @code {
+    CreateEdiViewModel createEdiViewModel;
+
     List<(string, MudBlazor.Color, string, string)> Edi = new()
     {
         {new("IdentityCard",Color.Transparent, "Identity Card*", "") },            
@@ -46,6 +48,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        createEdiViewModel = ViewModel;
         breadcrumbs._items = new List<BreadcrumbItem>
         {
             new BreadcrumbItem("Home", href: "/", disabled: false),
@@ -57,46 +60,51 @@
 
     private async void Submit()
     {
-        await createEdiViewModel.Submit();
+        createEdiViewModel.SubmitCommand.Execute(null);
         breadcrumbs.userData = createEdiViewModel.userData;
         nav.NavigateTo("/generate-wallet-with-password-page");
     }
 
     private async void GetFile(string property)
     {
-        await createEdiViewModel.PickPhotoAsync(property);
+        await createEdiViewModel.PickPhotoCommand.ExecuteAsync(property);
         UpdateFileList(property);
     }
 
     private async void GetPhoto(string property)
     {
-        await createEdiViewModel.TakePhotoAsync(property);
+        await createEdiViewModel.TakePhotoCommand.ExecuteAsync(property);
         UpdateFileList(property);
     }
 
     private async void GetAudio(string property)
     {
-        await createEdiViewModel.RecordAudio();
+        await createEdiViewModel.RecordAudioCommand.ExecuteAsync(null);
         UpdateFileList(property);
     }
 
     private async void UpdateFileList(string property)
     {
-        string file = Path.GetFileName(createEdiViewModel.EdiForm.GetType().GetProperty(property).GetValue(createEdiViewModel.EdiForm, null).ToString());
-        if (!string.IsNullOrEmpty(file))
-        {
-            var index = Edi.FindIndex(x => x.Item1 == property);
-            Edi[index] = new(Edi[index].Item1, Color.Success, Edi[index].Item3, file);
-            if (property == "IdentityCard")
-                id = true;
-            else if (property == "DrivingLicense")
-                dl = true;
-            else if (property == "Passport")
-                pas = true;
+        var propertyValue = createEdiViewModel.EdiForm.GetType().GetProperty(property).GetValue(createEdiViewModel.EdiForm, null);
 
-            await InvokeAsync(() => StateHasChanged());
+        if (propertyValue != null)
+        {
+            string file = propertyValue.ToString();
+            if (!string.IsNullOrEmpty(file))
+            {
+                var index = Edi.FindIndex(x => x.Item1 == property);
+                Edi[index] = new(Edi[index].Item1, Color.Success, Edi[index].Item3, file);
+                if (property == "IdentityCard")
+                    id = true;
+                else if (property == "DrivingLicense")
+                    dl = true;
+                else if (property == "Passport")
+                    pas = true;
+
+                await InvokeAsync(() => StateHasChanged());
+            }
+            //IAsyncRelayCommand<string> cmd =
+            //createEdiViewModel.PickPhotoAsyncCommand.Execute("IdentityCard");
         }
-        //IAsyncRelayCommand<string> cmd =
-        //createEdiViewModel.PickPhotoAsyncCommand.Execute("IdentityCard");
     }
 }
