--- a/BolWallet/Pages/FinancialTransactionsPage.razor
+++ b/BolWallet/Pages/FinancialTransactionsPage.razor
@@ -1,32 +1,35 @@
 ﻿@page "/financial-transactions-page"
-
+@inherits MvvmComponentBase<FinancialTransactionsViewModel>
 @inject Breadcrumbs breadcrumbs
 @inject NavigationManager nav;
 @inject UserViewModel userViewModel
-@inject FinancialTransactionsViewModel financialTransactionsViewModel
+
 
 <MudGrid>
     <MudItem xs="12" sm="6">
         <MudPaper Class="pa-2">
-            <MudText Color="@Color.Default">Total Balance: @financialTransactionsViewModel.BolAccount.TotalBalance</MudText>
+            @*<MudText Color="@Color.Default">Total Balance: @financialTransactionsViewModel.BolAccount.TotalBalance</MudText>*@
             <br/>
             <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> nav.NavigateTo("/send-bol-page"))">Transfer</MudButton>
             <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> nav.NavigateTo("/move-claim-page"))">Transfer Claim</MudButton>
-            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> await financialTransactionsViewModel.Claim())">Claim</MudButton>
+            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(async z=> nav.NavigateTo("/claim-page"))">Claim</MudButton>
         </MudPaper>
     </MudItem>
 </MudGrid>
+
 @code {
+    FinancialTransactionsViewModel financialTransactionsViewModel;
     protected override async Task OnInitializedAsync()
     {
-        await financialTransactionsViewModel.Initialize();
+        financialTransactionsViewModel = ViewModel;
+                
         breadcrumbs._items = new List<BreadcrumbItem>
         {
             new BreadcrumbItem("Home", href: "/index-with-account", disabled: false),
             new BreadcrumbItem("Financial Transactions", href: null, disabled: true),
         };
 
-        breadcrumbs.userData = userViewModel._userData;
+        breadcrumbs.userData = userViewModel.userData;
         breadcrumbs.Update();
 
     }
