--- a/BolWallet/Pages/IndexWithAccount.razor
+++ b/BolWallet/Pages/IndexWithAccount.razor
@@ -1,11 +1,9 @@
 ﻿@page "/index-with-account"
 @implements IDisposable
+@inherits MvvmComponentBase<MainWithAccountViewModel>
 @inject Breadcrumbs breadcrumbs
 @inject IDialogService DialogService
 @inject NavigationManager nav;
-@inject UserViewModel userViewModel
-@inject MainWithAccountViewModel mainWithAccountViewModel
-@inject RegistrationViewModel registrationViewModel
 
 <MudOverlay @bind-Visible="isVisible" DarkBackground="true">
     <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
@@ -37,7 +35,7 @@
     </TitleContent>
     <DialogContent>
         <p>Code Name:@(mainWithAccountViewModel.CodeName)</p>
-        <p>EDI:@(registrationViewModel.Edi)</p>
+        <p>EDI:@(mainWithAccountViewModel.BolAccount.Edi)</p>
         <p>Main Address:@mainWithAccountViewModel.MainAddress</p>
     </DialogContent>
     <DialogActions>
@@ -53,7 +51,7 @@
     
 </style>
 @code {
-
+    MainWithAccountViewModel mainWithAccountViewModel;
     bool loading = false, visible=false;
     private bool isVisible = true;
 
@@ -61,6 +59,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        mainWithAccountViewModel = ViewModel;
         isVisible = true;
         await InvokeAsync(StateHasChanged);
         await mainWithAccountViewModel.Initialize();
@@ -72,13 +71,10 @@
             new BreadcrumbItem("Home", href: "#", disabled: true),
         };
 
-        breadcrumbs.userData = userViewModel._userData;
+        breadcrumbs.userData = mainWithAccountViewModel.userData;
         breadcrumbs.Update();
         breadcrumbs.OnButtonClick += HandleButton;
-        if (!breadcrumbs.isRegistered)
-        {
-            await registrationViewModel.Initialize();
-        }
+       
         isVisible = false;
         await InvokeAsync(StateHasChanged);
     }
@@ -86,7 +82,7 @@
     {
         if(args == NavButtons.Refresh)
         {
-            await mainWithAccountViewModel.FetchBolAccountData();
+            await mainWithAccountViewModel.FetchBolAccountDataCommand.ExecuteAsync(null);
 
         }
         else if (args == NavButtons.Register)
@@ -97,10 +93,10 @@
     }
 
     private async void Submit() { 
-        await registrationViewModel.Register();
-        if (registrationViewModel.userData != null)
+        await mainWithAccountViewModel.RegisterCommand.ExecuteAsync(null);
+        if (mainWithAccountViewModel.userData != null)
         {
-            breadcrumbs.userData = registrationViewModel.userData;
+            breadcrumbs.userData = mainWithAccountViewModel.userData;
             breadcrumbs.Update();
             nav.NavigateTo("/CertifyViewModel");
         }
