--- a/BolWallet/Pages/RetrieveBolPage.razor
+++ b/BolWallet/Pages/RetrieveBolPage.razor
@@ -1,10 +1,9 @@
 ﻿@page "/retrieve-bol-page"
-
+@inherits MvvmComponentBase<RetrieveBolViewModel>
 
 @inject Breadcrumbs breadcrumbs
 @inject NavigationManager nav;
 @inject UserViewModel userViewModel
-@inject RetrieveBolViewModel retrieveBolViewModel
 
 <MudGrid>
     <MudItem xs="12" sm="6">
@@ -13,24 +12,39 @@
             <br />
            
             <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary"
-                       OnClick="@(async z=> retrieveBolViewModel.OnClickCopyCodename())">@retrieveBolViewModel.CodenameText</MudButton>
+                       OnClick="OnClickCopyCodename">@retrieveBolViewModel.CodenameText</MudButton>
             <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary"
-                       OnClick="@(async z=> retrieveBolViewModel.OnClickCopyAddress())">@retrieveBolViewModel.CommAddressText</MudButton>
+                       OnClick="OnClickCopyAddress">@retrieveBolViewModel.CommAddressText</MudButton>
         </MudPaper>
     </MudItem>
 </MudGrid>
 @code {
+    RetrieveBolViewModel retrieveBolViewModel;
     protected override async Task OnInitializedAsync()
     {
-        
+        retrieveBolViewModel = ViewModel;
         breadcrumbs._items = new List<BreadcrumbItem>
         {
             new BreadcrumbItem("Home", href: "/index-with-account", disabled: false),
             new BreadcrumbItem("Retrive BOL", href: null, disabled: true),
         };
 
-        breadcrumbs.userData = userViewModel._userData;
+        breadcrumbs.userData = userViewModel.userData;
         breadcrumbs.Update();
 
+    }
+
+    private void OnClickCopyCodename(MouseEventArgs args)
+    {
+        Clipboard.Default.SetTextAsync("Codename");
+
+        //Toast.Make("Codename copied to Clipboard").Show();
+    }
+
+    private void OnClickCopyAddress(MouseEventArgs args)
+    {
+        Clipboard.Default.SetTextAsync("Address");
+
+        //Toast.Make("Address copied to Clipboard").Show();
     }
 }
